[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/EndlessStage.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui/GUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/green_background.png" type="Texture" id=3]
[ext_resource path="res://scenes/gui/ChallengePanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/misc/FruitTrap.tscn" type="PackedScene" id=5]

[node name="EndlessStage" type="Node2D"]
script = ExtResource( 1 )

[node name="GUI" parent="." instance=ExtResource( 2 )]
margin_bottom = 0.0

[node name="Background" type="Sprite" parent="."]
position = Vector2( -2.15845, 0 )
texture = ExtResource( 3 )
centered = false

[node name="Enemy_Container" type="Node" parent="."]

[node name="ChallengePanel" parent="." instance=ExtResource( 4 )]

[node name="Timer" type="Timer" parent="."]

[node name="Spawners" type="Node" parent="."]

[node name="FruitTrap" parent="." instance=ExtResource( 5 )]
[connection signal="start_game" from="ChallengePanel" to="." method="_on_ChallengePanel_start_game"]
[connection signal="area_entered" from="FruitTrap" to="." method="_on_FruitTrap_area_entered"]
